# dawki

./: .clang-format  .gitignore  dawki.c  dawki_widgets_config.json  meson.build
assets/: dawki.css  gresources.xml
config/: dawki_widgets_config.json
features/: dawki.cc  dawki.feature  meson.build
include/dawki/box_widget/containers/: containers_actions_box.h  containers_list_box.h  containers_root_box.h
include/dawki/box_widget/root/: app_content_box.h  app_navigation_box.h  app_root_window_box.h  app_window_action_bar_box.h
include/dawki/common/: css_initializer.h  css_source_provider.h  dawki_config_parser.h
include/dawki/common/widgets/: base_widget.h  button.h
include/dawki/config/: dawki_config_parser.h
include/dawki/constant/: gui_constant.h
include/dawki/container_widget/: app_content.panel.h  app_root.window.h  app_window_action_bar.panel.h  content_action_bar.panel.h  header_bar.panel.h  navigation.panel.h
include/dawki/gui/config/: dawki_config_parser.h
include/dawki/gui/css/: css_source_provider.h
include/dawki/gui/widget/box/app_root/: app_content_box.h  app_content_header_box.h  app_main_window.h  app_navigation_box.h  app_navigation_header_box.h  app_navigation_items_box.h  app_root_box.h  app_window_actions_box.h
include/dawki/gui/widget/box/docker_containers/: docker_containers_box.h
include/dawki/gui/widget/button/: close.button.h  maximize.button.h  minimize.button.h
include/dawki/logging/: logging.h
include/dawki/store/: dawki.store.h  dawki_store.h
include/dawki/view/: app_content.panel.h  app_root.window.h  content_action_bar.panel.h  header_bar.panel.h
include/dawki/widget/base/: widget.h
include/dawki/widget/box/app_root/: app_content_box.h  app_content_header_box.h  app_main_window.h  app_navigation_box.h  app_navigation_header_box.h  app_navigation_items_box.h  app_root_box.h  app_root_window_box.h  app_window_actions_box.h
include/dawki/widget/box/docker_containers/: docker_containers_box.h
include/dawki/widget/button/: close.button.h  maximize.button.h  minimize.button.h  navigation_item.h
src/: main.cc  main.scss  meson.build
src/box_widget/: box_widget.scss
src/box_widget/containers/: docker_containers_box.cc
src/box_widget/root/: app_content_box.cc  app_navigation_box.cc  app_root_window_box.cc  app_window_actions_box.cc
src/box_widget/style/: app_content_box.scss  app_navigation_box.scss  app_window_action_bar_box.scss
src/common/: css_initializer.cc  css_source_provider.cc  dawki_config_parser.cc
src/common/widgets/: base_widget.cc  button.cc
src/config/: dawki_config_parser.cc  dawki_widgets_config.json
src/container_widget/: app_content.panel.cc  app_root.window.cc  app_window_action_bar.panel.cc  container_widget.scss  content_action_bar.panel.cc  header_bar.panel.cc  navigation.panel.cc
src/container_widget/style/: app_content_panel.scss  app_window_action_bar.panel.scss  header_bar.panel.scss  navigation.panel.scss
src/core/: meson.build
src/css/: box.scss  button.scss  css_source_provider.cc  main.scss  variables.scss
src/css/box/: box.scss
src/css/box/app_root/: app_root_window.scss
src/css/button/: close.scss  maximize.scss
src/css/themes/: dark.scss
src/gui/: main.cc  meson.build
src/gui/config/: app_layout_config.json  dawki_config_parser.cc  user_ui_default_config.json
src/gui/css/: box.scss  css_initializer.cc  css_source_provider.cc  main.scss  variables.scss
src/gui/css/icons/: default.scss
src/gui/css/themes/: dark.scss
src/gui/store/: dawki_store.cc
src/gui/widget/base/: widget.cc
src/gui/widget/box/app_root/: app_content_box.cc  app_content_header_box.cc  app_main_window.cc  app_navigation_box.cc  app_navigation_header_box.cc  app_navigation_items_box.cc  app_root_box.cc  app_window_actions_box.cc
src/gui/widget/box/docker_containers/: docker_containers_box.cc
src/gui/widget/button/: close.button.cc  maximize.button.cc  minimize.button.cc
src/logging/: logging.cc
src/view/: app_content.panel.cc  app_root.window.cc  app_window_action_bar.panel.cc  content_action_bar.panel.cc  header_bar.panel.cc  navigation.panel.cc
src/widget/base/: widget.cc
src/widget/box/app_root/: app_content_box.cc  app_content_header_box.cc  app_main_window.cc  app_navigation_box.cc  app_navigation_header_box.cc  app_navigation_items_box.cc  app_root_box.cc  app_root_window.cc  app_root_window_box.cc  app_window_actions_box.cc
src/widget/box/docker_containers/: docker_containers_box.cc
src/widget/button/: button.scss  close.button.cc  maximize.button.cc  minimize.button.cc
src/widget/button/close/: close.button.cc
src/widget/button/style/: close.scss  maximize.scss  minimize.scss  window_action_btn.scss
test/: main.cc
